force-app/main/default/objects/Quote/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Número de version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>