force-app/main/default/objects/Quote/fields/VersionKey__c.field-meta.xml
<CustomField>
    <fullName>VersionKey__c</fullName>
    <label>VersionKey</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>